# ChangeLog for x11-libs/xview
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/xview/Attic/ChangeLog,v 1.2 2004/03/15 00:27:04 mr_bones_ Exp $

  14 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org> xview-3.2.ebuild:
  don't assign to PN; tidy

*xview-3.2 (02 AUG 2003)

  02 AUG 2003; Maarten Thibaut <murphy@gentoo.org> xview-3.2.ebuild :
  Initial import.