@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/xview/Attic/xview-3.2.ebuild,v 1.5 2004/03/15 00:27:04 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/xview/Attic/xview-3.2.ebuild,v 1.6 2004/03/27 04:53:01 zx Exp $
 
 inherit eutils
 
@@ -22,7 +22,7 @@ SRC_URI="http://www.ibiblio.org/pub/Linux/libs/X/xview/${MY_PN}.src.tar.gz
 S=${WORKDIR}/${MY_PN}
 LICENSE="sun-openlook"
 SLOT="0"
-KEYWORDS="~alpha ~amd64 ~hppa ~ppc ~sparc x86"
+KEYWORDS="~alpha ~amd64 hppa ~ppc ~sparc x86"
 IUSE=""
 
 DEPEND="virtual/x11"
